--- a/Assisgnment-3/loopback-getting-started/Assisgnment-3/Dockerfile
+++ b/Assisgnment-3/loopback-getting-started/Assisgnment-3/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /app
 RUN npm install -g loopback-cli
 RUN npm install -g apiconnect
 RUN npm install -g strongloop
+RUN npm install
 EXPOSE 3000
 ENTRYPOINT [ "node", "." ]
