--- a/Assisgnment-3/loopback-getting-started/Assisgnment-3/app.yaml
+++ b/Assisgnment-3/loopback-getting-started/Assisgnment-3/app.yaml
@@ -31,4 +31,25 @@ spec:
     - port: 3000
   selector:
     app: loopback
-  type: LoadBalancer   
+  type: LoadBalancer  
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: lb-ingress-https
+  labels:
+    app: loopback
+  annotations:
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /testapp
+        pathType: Prefix
+        backend:
+          service:
+            name: loopback-svc
+            port:
+              number: 3000
+
+
